@@ -1,5 +1,7 @@
 5.8
 
+Fixed: TestNG-214: SkipException and TimeBombSkipException should accept nested exceptions
+Fixed: TestNG-211: new Parser(inputStream) doesn't work
 Added: Methods that form a cycle are now shown when the cycle is detected
 Added: Doc for IMethodInterceptor (5.16) and TestNG listeners (5.18)
 Added: Support for <listeners> in testng.xml
